<resources>
    <string name="app_name">Beauty Club</string>
    <string name="title_home">Главная</string>
    <string name="title_nails">Услуги</string>
    <string name="title_profile">Профиль</string>
    <string name="title_master">Мастера</string>
    <string name="title_user">Пользователи</string>
    <string name="need_sign_up">We need you to sign up</string>
    <string name="enter_login">Введите логин</string>
    <string name="enter_password">Введите пароль</string>
    <string name="sign_in">Авторизоваться</string>
    <string name="register_text">У вас еще нет аккаунта? Зарегистрируйтесь</string>
    <string name="enter_email">Введите почту</string>
    <string name="enter_first_name">Введите фамилию</string>
    <string name="enter_second_name">Введите имя</string>
    <string name="enter_repeat_password">Повторите пароль</string>
    <string name="sign_up">Зарегистрироваться</string>
    <string name="title_back">Назад</string>
    <string name="address">Адрес:</string>
    <string name="contacts">Наши контакты:</string>
    <string name="graphics">Ежедневно с 10:00 до 21:00</string>
    <string name="our_services">Наши услуги</string>
    <string name="hair_care">Уход за волосами</string>
    <string name="eyelash_extensions">Наращивание ресниц</string>
    <string name="nails">Маникюр</string>
    <string name="eyebrow_design">Дизайн бровей</string>
    <string name="login_text">Уже есть аккаунт? Войдите</string>
    <string name="more"><u>Подробнее...</u></string>
    <string name="icon_ruble">₽,\ </string>
    <string name="date_time">Дата и время</string>
    <string name="title_section">Секции</string>
    <string name="create_new_section">Создать новый раздел</string>
    <string name="enter_section_name">Введите секцию</string>
    <string name="add_section">Добавить секцию</string>
    <string name="save_section">Сохранить секцию</string>
    <string name="add_master">Назначить мастера</string>
    <string name="create_new_service">Создать новую услугу</string>
    <string name="add_service">Добавить услугу</string>
    <string name="enter_service_name">Введите услугу</string>
    <string name="enter_service_price">Введите цену</string>
    <string name="enter_service_time">Введите время</string>
    <string name="adding_master_question">Вы действительно хотите на значить мастером?</string>
    <string name="cancel">Отменить</string>
    <string name="appointment_to">Запись к мастеру %1$s на %2$s</string>
    <string name="master_appointment_to">Запись на %1$s</string>
    <string name="service_name">Услуга: %1$s</string>
    <string name="service_price">Цена: %1$s</string>
    <string name="service_duration">Длительность: %1$s</string>
    <string name="service_time">Время: %1$s</string>
    <string name="title_schedule">Записи</string>
    <string name="title_work">Работы</string>
    <string name="create_new_schedule">Добавить график</string>
    <string name="enter_phone">Введите телефон</string>
    <string name="subscribe">Записаться</string>
    <string name="enter_description">Введите описание (не обязательно)</string>
    <string name="next">Далее</string>
    <string name="choose_photo">Выбрать фото</string>
    <string name="yes">Да</string>
    <string name="no">Нет</string>
    <string name="title_users">Пользователи</string>
    <string name="time_schedule">Вы действительно хотите добавить cвободное время в %1$s?</string>
    <string name="title_graphic">График</string>
    <string name="to_appointment">Вы действительно хотите записаться на %1$s?</string>
    <string-array name="times">
        <item>час</item>
        <item>мин</item>
    </string-array>
</resources>