<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/adminServiceFragment"
        android:icon="@drawable/ic_services"
        android:title="@string/title_nails" />

    <item
        android:id="@+id/adminWorkerFragment"
        android:icon="@drawable/ic_master"
        android:title="@string/title_master" />

    <item
        android:id="@+id/adminUserFragment"
        android:icon="@drawable/ic_users"
        android:title="@string/title_users" />

    <item
        android:id="@+id/adminScheduleFragment"
        android:icon="@drawable/ic_schedule"
        android:title="@string/title_graphic" />

    <item
        android:id="@+id/adminProfileFragment"
        android:icon="@drawable/ic_profile"
        android:title="@string/title_profile" />
</menu>