<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg_gradient"
    android:fillViewport="true">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingBottom="60dp">

        <androidx.appcompat.widget.AppCompatTextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="60dp"
            android:fontFamily="@font/charlington"
            android:text="@string/app_name"
            android:textColor="@color/white"
            android:textSize="40sp" />

        <androidx.appcompat.widget.AppCompatTextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="10dp"
            android:fontFamily="@font/gawaa_regular"
            android:text="@string/need_sign_up"
            android:textColor="@color/white"
            android:textSize="18sp" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/emailLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="30dp"
            android:layout_marginTop="35dp"
            android:hint="@string/enter_email"
            android:textColorHint="@color/black"
            app:boxBackgroundMode="none">

            <androidx.appcompat.widget.AppCompatEditText
                android:id="@+id/etEmail"
                android:layout_width="match_parent"
                android:layout_height="55dp"
                android:background="@drawable/bg_edit_text"
                android:fontFamily="@font/finlandica_regular"
                android:inputType="textEmailAddress"
                android:paddingHorizontal="15dp"
                android:paddingVertical="10dp"
                android:textColor="@color/black"
                android:textSize="18sp" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/firstNameLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:layout_marginHorizontal="30dp"
            android:hint="@string/enter_first_name"
            android:textColorHint="@color/black"
            app:boxBackgroundMode="none">

            <androidx.appcompat.widget.AppCompatEditText
                android:id="@+id/etFirstName"
                android:layout_width="match_parent"
                android:layout_height="55dp"
                android:background="@drawable/bg_edit_text"
                android:fontFamily="@font/finlandica_regular"
                android:inputType="text"
                android:paddingHorizontal="15dp"
                android:paddingVertical="10dp"
                android:textColor="@color/black"
                android:textSize="18sp" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/secondNameLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="30dp"
            android:layout_marginTop="10dp"
            android:hint="@string/enter_second_name"
            android:textColorHint="@color/black"
            app:boxBackgroundMode="none">

            <androidx.appcompat.widget.AppCompatEditText
                android:id="@+id/etSecondName"
                android:layout_width="match_parent"
                android:layout_height="55dp"
                android:background="@drawable/bg_edit_text"
                android:fontFamily="@font/finlandica_regular"
                android:inputType="textEmailAddress"
                android:paddingHorizontal="15dp"
                android:paddingVertical="10dp"
                android:textColor="@color/black"
                android:textSize="18sp" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/passwordLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="30dp"
            android:layout_marginTop="10dp"
            android:hint="@string/enter_password"
            android:textColorHint="@color/black"
            app:boxBackgroundMode="none"
            app:passwordToggleEnabled="true">

            <androidx.appcompat.widget.AppCompatEditText
                android:id="@+id/etPassword"
                android:layout_width="match_parent"
                android:layout_height="55dp"
                android:background="@drawable/bg_edit_text"
                android:fontFamily="@font/finlandica_regular"
                android:inputType="textPassword"
                android:paddingHorizontal="15dp"
                android:paddingVertical="10dp"
                android:textColor="@color/black"
                android:textSize="18sp" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/repeatPasswordLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="30dp"
            android:layout_marginTop="10dp"
            android:hint="@string/enter_repeat_password"
            android:textColorHint="@color/black"
            app:boxBackgroundMode="none"
            app:errorEnabled="true"
            app:passwordToggleEnabled="true">

            <androidx.appcompat.widget.AppCompatEditText
                android:id="@+id/etRepeatPassword"
                android:layout_width="match_parent"
                android:layout_height="55dp"
                android:background="@drawable/bg_edit_text"
                android:fontFamily="@font/finlandica_regular"
                android:inputType="textPassword"
                android:paddingHorizontal="15dp"
                android:paddingVertical="10dp"
                android:textColor="@color/black"
                android:textSize="18sp" />
        </com.google.android.material.textfield.TextInputLayout>

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btnRegistration"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_gravity="center"
            android:layout_marginHorizontal="50dp"
            android:layout_marginTop="25dp"
            android:background="@drawable/bg_button"
            android:clickable="true"
            android:focusable="true"
            android:fontFamily="@font/antropos_freefont"
            android:text="@string/sign_up"
            android:textAllCaps="true"
            android:textColor="@color/white"
            android:textSize="16sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/passwordLayout" />

        <FrameLayout
            android:id="@+id/contentLoad"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="50dp"
            android:layout_marginTop="25dp"
            android:visibility="gone"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/passwordLayout">

            <View
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:background="@drawable/bg_button" />

            <ProgressBar
                android:id="@+id/progress"
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:layout_gravity="center"
                android:theme="@style/ContentLoader" />
        </FrameLayout>

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/loginNow"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="25dp"
            android:clickable="true"
            android:focusable="true"
            android:fontFamily="@font/antropos_freefont"
            android:text="@string/login_text"
            android:textColor="@color/white"
            android:textSize="12sp" />


    </LinearLayout>

</androidx.core.widget.NestedScrollView>