<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:fillViewport="true">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingBottom="60dp"
        android:orientation="vertical">

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <androidx.appcompat.widget.AppCompatImageView
                android:layout_width="match_parent"
                android:layout_height="300dp"
                android:scaleType="center"
                app:srcCompat="@drawable/home" />

            <FrameLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="#66000000" />

            <androidx.appcompat.widget.AppCompatTextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal|top"
                android:layout_marginTop="20dp"
                android:fontFamily="@font/charlington"
                android:text="Салон красоты Beauty Club"
                android:textColor="@color/white"
                android:textSize="24sp" />
        </FrameLayout>

        <androidx.appcompat.widget.AppCompatTextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="20dp"
            android:layout_marginTop="15dp"
            android:fontFamily="@font/finlandica_regular"
            android:text="@string/address"
            android:textSize="17sp" />

        <androidx.appcompat.widget.AppCompatTextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="40dp"
            android:layout_marginTop="10dp"
            android:fontFamily="@font/finlandica_regular"
            android:text="г. Уфа, ул. Октябрьской Революции, 27Б"
            android:textColor="@color/black"
            android:textSize="20sp" />

        <androidx.appcompat.widget.AppCompatTextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_marginHorizontal="20dp"
            android:layout_marginTop="15dp"
            android:fontFamily="@font/finlandica_regular"
            android:gravity="start"
            android:text="@string/contacts"
            android:textSize="17sp" />

        <androidx.appcompat.widget.AppCompatTextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="40dp"
            android:layout_marginTop="10dp"
            android:fontFamily="@font/finlandica_regular"
            android:gravity="start|center_vertical"
            android:text="+7 (909)-353-99-91"
            android:textColor="@color/black"
            android:textSize="20sp" />

        <androidx.appcompat.widget.AppCompatTextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="end"
            android:layout_marginHorizontal="20dp"
            android:layout_marginTop="15dp"
            android:fontFamily="@font/finlandica_regular"
            android:gravity="start"
            android:text="@string/graphics"
            android:textColor="@color/brand_color"
            android:textSize="17sp" />

        <androidx.appcompat.widget.AppCompatTextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="40dp"
            android:fontFamily="@font/antropos_freefont"
            android:text="@string/our_services"
            android:textColor="@color/black"
            android:textSize="20sp" />


        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_columnWeight="1"
            app:cardElevation="0dp"
            app:cardCornerRadius="8dp"
            android:layout_marginTop="15dp"
            android:layout_marginHorizontal="20dp"
            android:layout_gravity="center">

            <androidx.appcompat.widget.AppCompatImageView
                android:layout_width="match_parent"
                android:layout_height="250dp"
                android:scaleType="centerCrop"
                android:layout_gravity="center"
                app:srcCompat="@drawable/service_first" />

            <FrameLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="#4D000000" />

            <androidx.appcompat.widget.AppCompatTextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/hair_care"
                android:layout_margin="15dp"
                android:fontFamily="@font/antropos_freefont"
                android:textSize="20sp"
                android:textColor="@color/white"
                android:layout_gravity="end|bottom"/>
        </androidx.cardview.widget.CardView>


        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_columnWeight="1"
            app:cardElevation="0dp"
            app:cardCornerRadius="8dp"
            android:layout_marginTop="15dp"
            android:layout_marginHorizontal="20dp"
            android:layout_gravity="center">

            <androidx.appcompat.widget.AppCompatImageView
                android:layout_width="match_parent"
                android:layout_height="250dp"
                android:scaleType="centerCrop"
                android:layout_gravity="center"
                app:srcCompat="@drawable/service_second" />

            <FrameLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="#4D000000" />

            <androidx.appcompat.widget.AppCompatTextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/eyelash_extensions"
                android:layout_margin="15dp"
                android:fontFamily="@font/antropos_freefont"
                android:textSize="20sp"
                android:textColor="@color/white"
                android:layout_gravity="start|bottom"/>
        </androidx.cardview.widget.CardView>


        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_columnWeight="1"
            app:cardElevation="0dp"
            app:cardCornerRadius="8dp"
            android:layout_marginTop="15dp"
            android:layout_marginHorizontal="20dp"
            android:layout_gravity="center">

            <androidx.appcompat.widget.AppCompatImageView
                android:layout_width="match_parent"
                android:layout_height="250dp"
                android:scaleType="centerCrop"
                android:layout_gravity="center"
                app:srcCompat="@drawable/service_third" />

            <FrameLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="#4D000000" />

            <androidx.appcompat.widget.AppCompatTextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/nails"
                android:layout_margin="15dp"
                android:fontFamily="@font/antropos_freefont"
                android:textSize="20sp"
                android:textColor="@color/white"
                android:layout_gravity="end|bottom"/>
        </androidx.cardview.widget.CardView>


        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_columnWeight="1"
            app:cardElevation="0dp"
            app:cardCornerRadius="8dp"
            android:layout_marginTop="15dp"
            android:layout_marginHorizontal="20dp"
            android:layout_gravity="center">

            <androidx.appcompat.widget.AppCompatImageView
                android:layout_width="match_parent"
                android:layout_height="250dp"
                android:scaleType="centerCrop"
                android:layout_gravity="center"
                app:srcCompat="@drawable/service_fourth" />

            <FrameLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="#4D000000" />

            <androidx.appcompat.widget.AppCompatTextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/eyebrow_design"
                android:layout_margin="15dp"
                android:fontFamily="@font/antropos_freefont"
                android:textSize="20sp"
                android:textColor="@color/white"
                android:layout_gravity="start|bottom"/>
        </androidx.cardview.widget.CardView>


    </LinearLayout>

</androidx.core.widget.NestedScrollView>